--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [
+                'appAuthRedirectScheme': 'net.openid.appauthdemo'
+        ]
     }
     buildTypes {
         release {
@@ -22,6 +25,7 @@ android {
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
+    implementation 'net.openid:appauth:0.8.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat'
     implementation 'com.google.android.material:material:1.2.1'
