Updates to ensure log out is working effectively so login could work repetitively

--- a/app/src/main/res/raw/auth_config.json
+++ b/app/src/main/res/raw/auth_config.json
@@ -2,7 +2,7 @@
   "client_id": "ownerapi",
   "redirect_uri": "https://auth.tesla.com/void/callback",
   "end_session_redirect_uri": "https://auth.tesla.com/void/callback",
-  "end_session_endpoint": "https://auth.tesla.com/void/callback",
+  "end_session_endpoint": "https://auth.tesla.com/oauth2/v3/logout",
   "authorization_scope": "openid email offline_access",
   "authorization_endpoint_uri": "https://auth.tesla.com/oauth2/v3/authorize",
   "token_endpoint_uri": "https://auth.tesla.com/oauth2/v3/token",
